2014-05-15 LaplacesDemon: Added .mcmcamwg and .mcmcmwg
2014-05-15 Matrices: Added is.positive.semidefnite
2014-05-15 Package Structure: Converted to a copy of LaplacesDemon
2014-05-15 Distributions: Added rhalfcauchy
2014-05-13 Matrices: Added is.positive.definite, is.symmetric.matrix, and tr
2014-05-13 Distributions: Added dmvn, dmvnc, rmvn, rmvnc, rmvnp, and rmvnpc
2014-05-13 Distributions: Added dwishartc and rwishartc
2014-05-12 Distributions: Added dhalfcauchy
2014-05-12 Added partial (well, partially)
2014-05-10 Distributions: Added dwishart and rwishart
2014-05-10 Added interval
2014-05-10 LaplacesDemonCpp was created.